# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-08-28  Piotr Ożarowski
	* [Bug 420462] --clean fixed

2009-08-26  Michael Jahn
	* [#418911] It doesn't import cover art from FilmAffinity

2009-08-20  Piotr Ożarowski
	* Add pool_recycle parameter in config file and set the default to 1 hour
	  (SQLAlchemy will recycle MySQL connections after given number of seconds
	  of inactivity - fixes "MySQL server has gone away" issue)

2009-08-18  Piotr Ożarowski
	* Fix update_movie() to actually load the image

2009-08-13  Piotr Ożarowski
	* Add 'Mark as seen' extension
	* Allow PNG images to be used as toolbar icons by extensions
	* gutils.question now returns True or False

2009-08-12  Piotr Ożarowski
	* Remove Amazon stuff from preferences window
	* Region 2 and 4 names shorten (to fit in preferences window)
	* Show tabs on the left side of preferences window
	* Show extension settings in preferences

2009-08-11  Piotr Ożarowski
	* Add Player extension

2009-08-09  Piotr Ożarowski
	* Version changed to 0.11~svn
	* Initial structure for extensions created
	  + ~/.griffith/lib/extensions can be used for user's extensions
	* Amazon posters feature converted to Griffith extension

---- 0.10 ----

2009-08-03  Piotr Ożarowski
	* Releasing 0.10

2009-07-13  Piotr Ożarowski
	* Version changed to 0.10-rc1+svn
	* Filtering Volumes/Collections by loaned flag fixed

---- 0.10-rc1 ----

2009-07-12  Piotr Ożarowski
	* Loaning collections with lots of movies inside will work faster now
	* AniDB movie plugin updated (thanks to nickpick)
	* Translation files synchronized with Rosetta

2009-07-10  Michael Jahn
	* new export plugins: Ant Movie Catalog, GCstar, DVD Profiler XML Export V2 and V3

2009-07-07  Michael Jahn
	* updated Allocine, CineMovies, IMDb-de, MovieMeter, Zelluloid plugin

2009-07-06  Piotr Ożarowski
	* Reorganize ORM stuff file structure (db module moved to db package)

2009-07-05  Piotr Ożarowski