@@ -5,6 +5,11 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-09-02  Michael Jahn
+	* [#336855] Error being reported saving posters
+      cleanup of generating thumbnail versions of the images
+      and filenames for default image/thumbnail
+
 2009-08-28  Piotr Ożarowski
 	* [Bug 420462] --clean fixed
 
